# AutoHome

./: .env.example  .gitignore  GETTING_STARTED.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  SETUP_ES.md  pyproject.toml  requirements.txt
.github/agents/: action-dispatcher.agent.md  condition-engine.agent.md  crm-reader.agent.md  orchestrator.agent.md  planner.agent.md  scraper.agent.md
data/screenshots/: property_page.html
docs/: API_NOTES.md  PROJECT_STRUCTURE.md  VIABILITY_ANALYSIS.md
rules/: example_rules.yaml
scripts/: discover_clientify.py  explore_apis.py  test_clientify.py  test_e2e_stats.py  test_idealista.py  test_idealista_v2.py  test_inmovilla.py
src/autohome/: __init__.py  cli.py  config.py
src/autohome/agents/: action_dispatcher.py  base.py  condition_engine.py  crm_reader.py  scraper.py
src/autohome/connectors/: casafari.py  clientify.py  idealista.py  inmovilla.py
src/autohome/models/: action.py  property.py  prospect.py  rule.py
src/autohome/utils/: retry.py
tests/: __init__.py  conftest.py
tests/test_agents/: test_condition_engine.py
